--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,20 +57,24 @@ jobs:
           git commit -m "ci: bump submodules to latest tags" || true
           git push || true
 
-      - name: 🛠️ 配置 Docker Buildx | Setup Docker Buildx
-        if: steps.version-check.outputs.skip_build == 'false'
-        uses: docker/setup-buildx-action@v3
-
       - name: 🔐 登录 Docker Hub | Login to Docker Hub
         if: steps.version-check.outputs.skip_build == 'false'
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3.6.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: 🛠️ 配置 QEMU | Set up QEMU
+        if: steps.version-check.outputs.skip_build == 'false'
+        uses: docker/setup-qemu-action@v3.7.0
+     
+      - name: 🛠️ 配置 Docker Buildx | Setup Docker Buildx
+        if: steps.version-check.outputs.skip_build == 'false'
+        uses: docker/setup-buildx-action@v3.11.1
 
       - name: 🚀 构建并推送镜像 | Build and Push Image
         if: steps.version-check.outputs.skip_build == 'false'
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v6.18.0
         with:
           context: .
           platforms: ${{ env.PLATFORMS }}
